<resources>
    <string name="app_name">다둥이행복이</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- 임시 -->
    <string name="temp">임시</string>

    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="submit">확인</string>

    <!--권한 설정 -->
    <string name="permission_checking">권한 확인</string>
    <string name="permission_setting_title">권한 설정</string>
    <string name="permission_setting_message">권한이 필요합니다</string>
    <string name="permission_setting_restart">권한 설정 후 재시작</string>

    <!--시작 화면-->
    <string name="index_message">Electronic Station Checker</string>
    <string name="network_not_working">네크워크에 연결되어 있지 않습니다.\n확인후 다시 실행해주세요.</string>


    <!--네비 화면-->
    <string name="menu1">공지사항</string>
    <string name="menu2">지도</string>
    <string name="menu3">게시판</string>
    <string name="menu4">뉴스</string>
    <string name="nav_profile">프로필설정</string>


    <!-- 프로필 -->
    <string name="profile_setting">프로필 설정</string>
    <string name="profile_nickname">별명</string>
    <string name="profile_id">ID</string>
    <string name="profile_pw">PW</string>
    <string name="profile_phone">전화</string>
    <string name="profile_age">나이</string>
    <string name="profile_car_model">차종</string>
    <string name="profile_charge_type">충전타입</string>
    <string name="device_number">기기 번호</string>
    <string name="phone_number">전화 번호</string>
    <string name="id_need">ID를 설정해주세요</string>
    <string name="pw_need">PW를 설정해주세요</string>
    <string name="nickname_need">별명를 설정해주세요</string>
    <string name="change_save">변경사항을 저장하시겠습니까?</string>
    <string name="no_change">변경된 사항이 없습니다</string>
    <string name="no_data">데이터가 없습니다</string>
    <string name="member_insert_fail_message">사용자 등록에 실패하였습니다. 다시 시도해주세요.</string>

    <!-- 프로필 아이콘 -->
    <string name="albumn">앨범</string>
    <string name="camera">카메라</string>


    <!-- 지도 리스트 화면 -->
    <string name="list_open">목록보기</string>
    <string name="list_close">목록닫기</string>
    <string name="no_list">현재 위치에는 조회할 데이터가 없습니다.</string>
    <string name="message_zoom_level_max_over">지도를 좀 더 확대해야 배너가 보입니다.</string>
    <string name="unit_m">m</string>
    <string name="unit_km">Km</string>


    <!-- 오류 체크 -->
    <string name="err">깃오류체크</string>

    <!--업종 -->
    <string-array name="types">
        <item name="type_all">전체보기</item>
        <item name="type_health">건강/의료</item>
        <item name="type_parking">공영주차장</item>
        <item name="type_edu">교육</item>
        <item name="type_etc">기타</item>
        <item name="type_book">도서/문구</item>
        <item name="type_library">도서관</item>
        <item name="type_mart">마트/식품</item>
        <item name="type_culture">문화/체육</item>
        <item name="type_living">생활</item>
        <item name="type_banking">생활/금융</item>
        <item name="type_eat">외식</item>
        <item name="type_teen">청소년시설</item>
        <item name="type_baby">출산/육아</item>
    </string-array>

    <!--검색용 업종 -->
    <string-array name="types_search">
        <item name="type_all">전체업종</item>
        <item name="type_health">건강/의료</item>
        <item name="type_parking">공영주차장</item>
        <item name="type_edu">교육</item>
        <item name="type_etc">기타</item>
        <item name="type_book">도서/문구</item>
        <item name="type_library">도서관</item>
        <item name="type_mart">마트/식품</item>
        <item name="type_culture">문화/체육</item>
        <item name="type_living">생활</item>
        <item name="type_banking">생활/금융</item>
        <item name="type_eat">외식</item>
        <item name="type_teen">청소년시설</item>
        <item name="type_baby">출산/육아</item>
    </string-array>

    <!--district-->
    <string-array name="district_search">
        <item name="district_all">전체지역</item>
        <item name="district_Gangnam">강남구</item>
        <item name="district_Gangdong">강동구</item>
        <item name="district_Gangbook">강북구</item>
        <item name="district_Gangseo">강서구</item>
        <item name="district_Gwanak">관악구</item>
        <item name="district_Gwangjin">광진구</item>
        <item name="district_Gooro">구로구</item>
        <item name="district_Geumcheon">금천구</item>
        <item name="district_Nowon">노원구</item>
        <item name="district_Dobong">도봉구</item>
        <item name="district_Dongdaemoon">동대문구</item>
        <item name="district_Dongjak">동작구</item>
        <item name="district_Mapo">마포구</item>
        <item name="district_Seodaemoon">서대문구</item>
        <item name="district_Seocho">서초구</item>
        <item name="district_Seongdong">성동구</item>
        <item name="district_Seongbook">성북구</item>
        <item name="district_Yangcheon">양천구</item>
        <item name="district_Youngdeungpo">영등포구</item>
        <item name="district_Yongsan">용산구</item>
        <item name="district_Eunpyeong">은평구</item>
        <item name="district_Jongro">종로구</item>
        <item name="district_Joong">중구</item>
        <item name="district_Joongrang">중랑구</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
