<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/gl"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/heart"
            android:title="@string/menu1" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/heart"
            android:title="@string/menu2" />
        <item
            android:id="@+id/nav_board"
            android:icon="@drawable/heart"
            android:title="@string/menu3" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/heart"
            android:title="@string/menu4" />
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/heart"
            android:title="@string/menu5" />
    </group>



</menu>
