<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_large"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="top"
            android:src="@android:drawable/sym_def_app_icon"
            app:civ_border_color="#AAAAAA"
            app:civ_border_width="2dp" />



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_id"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="start"
            android:maxLines="1"
            android:maxLength="7"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_pw"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_nickname"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_age"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_car_model"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_charge_type"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_charge_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="@string/profile_phone"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:enabled="false"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/phone_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="start"
            android:text="phone"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:background="#55AAAAAA" />

</LinearLayout>